# guv

./: .buildinfo  .gitignore  .gitlab-ci.yml  MANIFEST.in  Makefile  README.md  completion.html  dodo.py  genindex.html  index.html  objects.inv  operations.html  pyproject.toml  search.html  searchindex.js  setup.py  tasks.html  tox.ini
.doctrees/: completion.doctree  environment.pickle  index.doctree  operations.doctree  tasks.doctree
.github/workflows/: docs.yml  python-package.yml
_sources/: index.md.txt  operations.rst.txt  tasks.rst.txt
docs/: completion.md  conf.py  get_started.md  get_started.rst  index.md  index.rst  misc.rst  tasks.rst  tutorial.rst  variables.rst
docs/misc/: completion.md  create_task.md  path.md  variables.md
docs/tasks/: attendance.md  calendar.md  gradebook.md  grades.md  ical.md  instructors.md  internal.md  misc.md  moodle.md  students.md  trombi.md  trombinoscope.md
docs/tutorial/: docs.md  inst.md  semester_config.md  tree.md  uv_config.md
doit_utc/: config.py  dodo.py  dodo_attendance.py  dodo_calendar.py  dodo_grades.py  dodo_ical.py  dodo_instructors.py  dodo_moodle.py  dodo_students.py  dodo_trombinoscope.py  dodo_utc.py  exceptions.py  gradebook.py  openpyxl_patched.py  openpyxl_utils.py  runner.py  schema_utils.py  tasks.py  utils.py  utils_config.py  utils_noconfig.py
doit_utc/scripts/: add_student_data.py  excel_hours.py  moodle_date.py  parse_utc_list.py  xls_gradebook.py
doit_utc/templates/: attendance_list.tex.jinja2  attendance_name_full.tex.jinja2  semester_config.py  trombinoscope_template_2.tex.jinja2  uv_config.py
guv/: dodo_calendar.py  dodo_grades.py  dodo_instructors.py  dodo_moodle.py  dodo_trombinoscope.py  openpyxl_utils.py  runner.py  utils.py
guv/tasks/: __init__.py  attendance.py  calendar.py  dodo_attendance.py  dodo_calendar.py  dodo_grades.py  dodo_ical.py  dodo_instructors.py  dodo_moodle.py  dodo_trombinoscope.py  dodo_utc.py  grades.py  ical.py  instructors.py  moodle.py  students.py
guv/templates/: attendance_list.tex.jinja2  uv_config.py  (+1 more)
resources/: moodle_availability_conditions.js  moodle_delete_all.js  moodle_download_group_button.js  moodle_download_groupings.js  moodle_set_datetimes.js
scripts/: excel_hours.py  merge_utc_moodle_listings.py  moodle_date.py  parse_utc_list.py  utc_listing_to_csv.py  xls_gradebook.py
templates/: attendance_list.tex.jinja2  attendance_list_noname.tex.jinja2
tests/: conftest.py  test_000_create.py  test_001_base.py  test_aggregate.py  test_aggregator.py  test_attendance.py  test_cal_inst.py  test_cal_uv.py  test_calendar.py  test_create.py  test_csv_create_groups.py  test_csv_for_upload.py  test_csv_groups.py  test_csv_groups_groupings.py  test_csv_inscrits.py  test_gradebook.py  test_grades.py  test_html_inst.py  test_ical.py  test_ical_inst.py  test_ical_slots.py  test_ical_uv.py  test_instructors.py  test_json_restriction.py  test_moodle.py  test_pdf_attendance.py  test_pdf_attendance_full.py  test_planning_slots.py  test_planning_slots_all.py  test_students.py  test_trombinoscope.py  test_utc.py  test_utc_uv_list_to_csv.py  test_utils_config.py  test_week_slots.py  test_week_slots_all.py  test_xls_grade_book_group.py  test_xls_grade_book_jury.py  test_xls_grade_book_no_group.py  test_xls_grade_book_nogroup.py  (+2 more)
(+166 files in other folders)
