[build-system]
requires = ["setuptools>=45"]
build-backend = "setuptools.build_meta"

[project]
name = "guv"
authors = [
  {name = "Sylvain Rousseau", email = "sylvain.rousseau@hds.utc.fr"},
]
readme = "README.md"
description = "Tool for managing course units"
dynamic = ["version"]
requires-python = ">=3.8"
license = {text = "MIT"}
scripts = {guv = "guv.runner:main"}
dependencies = [
  "doit",
  "Jinja2",
  "jsonschema",
  "latex",
  "numpy",
  "openpyxl",
  "pandas",
  "prompt_toolkit",
  "PyYAML",
  "schema",
  "Unidecode",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-dependency",
    "pytest-order",
    "shtab"
]
doc = [
    "sphinx",
    "furo",
    "myst_parser",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
guv = ["schemas/*", "data/*", "images/*", "data/templates/*", "locale/*/LC_MESSAGES/*.mo"]

[tool.setuptools.dynamic]
version = {attr = "guv.__version__"}
