[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "guv"
authors = [
  { name = "Sylvain Rousseau", email = "sylvain.rousseau@hds.utc.fr" },
]
readme = "README.md"
description = "Command-line tool for managing university courses with automated data aggregation and document generation"
dynamic = ["version"]
requires-python = ">=3.8"
license = { text = "MIT" }
scripts = { guv = "guv.runner:main" }

dependencies = [
  "doit",
  "Jinja2",
  "jsonschema<4.23",
  "numpy",
  "openpyxl",
  "pandas",
  "xlrd",
  "prompt_toolkit",
  "PyYAML",
  "schema",
  "Unidecode",
]

[dependency-groups]
dev = [
  "autoflake>=2.3.1",
  "pytest>=8.3.5",
  "pytest-dependency",
  "pytest-order",
  "pytest-path-dependency @ git+https://codeberg.org/thisirs/pytest-path-dependency.git",
  "shtab",
]
doc = [
  "sphinx",
  "furo",
  "myst_parser",
]

[tool.hatch.version]
source = "code"
path = "src/guv/__init__.py"
pattern = "__version__ = ['\"](?P<version>[^'\"]+)['\"]"

[tool.hatch.build]
sources = ["src"]
include = [
  "src/guv",
  "src/guv/schemas/*",
  "src/guv/data/*",
  "src/guv/data/templates/*",
  "src/guv/locale/*/LC_MESSAGES/*.mo",
  "src/guv/locale/*/texts/*",
]
